prediction system done

--- a/img_cla/templates/index.html
+++ b/img_cla/templates/index.html
@@ -18,8 +18,11 @@
     
     {% if img %}
 
-        <img src="{{img}}" alt="img">
+        <img style="width: 400px; height: 400px;" src="{{img}}" alt="img">
 
+
+
+        <h1>Your Prediction: {{pre}} </h1>
     {% endif %}
 </body>
 </html>
