--- a/img_cla/static/css/style.css
+++ b/img_cla/static/css/style.css
@@ -1,10 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Tapestry&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body{
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    background: #FF512F;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F09819, #FF512F);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F09819, #FF512F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+    font-family: 'Roboto', sans-serif;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.432);
+
 
 }
 
-h1{
-    color: rebeccapurple;
+#nav_text{
+    font-family: 'Tapestry', cursive !important;
+    font-size: 1.6rem;
+}
+
+.main_div{
+    width: 50%;
+    margin: 4rem auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  
+}
+
+
+.image_div{
+    display: flex;
+    justify-content: center;
+    border-radius: 12px;
+    width: 50%;
+    margin: 2rem auto;
+    box-shadow: 0 0 10px #be8e67;
+}
+
+img{
+    width: 100%;
+    border-radius: 12px;
+}
+
+.pre_div{
+    text-align: center;
+}
+
+p{
+    font-size: 1.5rem;
+    font-style: oblique;
+}
+
+.DOG{
+    color: rgb(47 255 17);
+}
+
+.CAT{
+    color: rgb(192 255 0);
+}
+
+@media screen and (max-width: 550px) {
+    .main_div{
+    width: 85%;
+    margin: 4rem auto;
+
+  
+}
+
+
+.image_div{
+   
+    width: 70%;
+    margin: 2rem auto;
+   
+}
+
+img{
+    width: 100%;
+   
+}
+
+
+
+p{
+    font-size: 1.2rem;
+    
+}
+    
+
+#nav_text{
+   
+    font-size: 1.2rem;
+}
+
 }
