--- a/img_cla/templates/index.html
+++ b/img_cla/templates/index.html
@@ -7,22 +7,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <link rel="stylesheet" href="{%static 'css/style.css' %}">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <title> Image Classification Cat & Dog </title>
 </head>
 <body>
-    <form action="{% url 'cla:index' %}" method="POST" enctype="multipart/form-data">
+    <nav class="navbar navbar-light bg-light" style="background-color: rgba(250, 235, 215, 0) !important; ">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1" id="nav_text">Image Classification</span>
+        </div>
+    </nav>
+    <div class="main_div">
+    <form action="{% url 'cla:index' %}" method="POST" enctype="multipart/form-data"  class="row g-3">
          {% csrf_token %}
-        <input type="file" name="image"  >
-        <button type="submit">upload</button>
+        <div class="input-group mb-3">
+                <input class="form-control" type="file" id="formFile" name="image" aria-describedby="button-addon2" required>
+                <button class="btn btn-success" type="submit" id="button-addon2">Predict</button>
+        </div>
+       
     </form>
     
-    {% if img %}
+  {% if img %}
+    <div class="image_div">
+        <img  src="{{img}}" alt="img">
+        
+    </div>
 
-        <img style="width: 400px; height: 400px;" src="{{img}}" alt="img">
-
-
-
-        <h1>Your Prediction: {{pre}} </h1>
+    <div class="pre_div">
+        <p> <strong> PREDICTION :</strong> <strong class="{{pre}}"> {{pre}} </strong> </p>
+    </div>
+        
     {% endif %}
+    </div>
 </body>
 </html>
